[gd_scene load_steps=5 format=3 uid="uid://bxsennemopq4g"]

[ext_resource type="Script" uid="uid://bj6bkghob3cvj" path="res://Scripts/Objectscripts/house.gd" id="1_mvaxn"]
[ext_resource type="Texture2D" uid="uid://buw1grb4gwchw" path="res://Assets/Houses/house.png" id="2_wsnda"]
[ext_resource type="PackedScene" uid="uid://mp7oggiiqpnk" path="res://Interaction/InteractionArea/InteractionArea.tscn" id="3_r5inp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5qefm"]
radius = 14.3178

[node name="House1" type="StaticBody2D"]
collision_layer = 2
script = ExtResource("1_mvaxn")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_wsnda")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(0, -1)
polygon = PackedVector2Array(-49, 42, -13, 42, -13, 32, 18, 32, 17, 43, 58, 42, 57, -1, -49, -1)

[node name="EnterHouseArea" parent="." instance=ExtResource("3_r5inp")]
action_name = "Enter"

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnterHouseArea"]
position = Vector2(4, 27)
shape = SubResource("CircleShape2D_5qefm")
debug_color = Color(0.529412, 0.572549, 0.0627451, 0.654902)

[node name="EnterHouseTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="timeout" from="EnterHouseTimer" to="." method="_on_enter_house_timer_timeout"]
